<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dyanote</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="edit_button_text">Edit</string>
    <string name="save_button_text">Save</string>
    <string name="no_network_error">Dyanote needs an internet connection to get your notes.</string>
    <string name="connected_message">Connected.</string>
    <string name="delete_button_text">Delete</string>
    <string name="new_button_text">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="new_note_title">New note title</string>
    <string name="new_note_content"><![CDATA[<note></note>]]></string>
    <string name="note_deleted_message">That note was deleted</string>

</resources>
