<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always|withText" />

    <item android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always|withText" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="3"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
